# SharedDllStaticLib

./: .gitignore  CMakeLists.txt  README.md  make_msvc_solutions.bat  nmake_in_vs2010_x64_prompt_run_vscode.bat
ExeShared/: CMakeLists.txt  main.cpp
ExeStatic/: CMakeLists.txt  main.cpp
SharedDll/: CMakeLists.txt
StaticLib/: CMakeLists.txt
src/: Hello.cpp  Hello.h  defines.h
